# sniff-rs

./: Cargo.toml  README.md
src/: main.rs
src/analyzer/: analyzer.rs  definitions.rs  error.rs  format_packets.rs  interface.rs  mod.rs  pcap_interface.rs
src/cli/: mod.rs  subcommands.rs
src/command/: mod.rs
src/command/subcommands/interface/: list.rs  mod.rs
src/logger/: mod.rs
src/parser/: mod.rs
src/utils/: cli.rs  logger.rs  mod.rs
