[package]
name = "sniff-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = { version = "1.1.0", features = ["capture-stream"] }
thiserror = "1.0.49"
net-sift = { git = "https://github.com/0xphen/net-sift.git", branch = "main" }
clap = { version = "4.4.7", features = ["derive"] }
fern = { version = "0.6.2", features = ["colored"] }
ansi_term = "0.12.1"
log = "0.4.20"
humantime = "2.1.0"
nom = "7.1.3"

[dev-dependencies]
mockall = "0.11.4"

